# beefs

./: .gitignore  AchiTask.hs  Achikaps.hs  Interval.hs  IntervalExistential.hs  LICENSE  RTree.hs  Value.hs  Volume.hs  Zone.hs  beefs.cabal  spatial.cabal
java/: Scan.java
src/: AchiQuery.hs  AchiTask.hs  AchiVolume.hs  Achikaps.hs  Count.hs  Interval.hs  RNode.hs  RTree.hs  Rect.hs  ScanFactors.hs  ScanNode.hs  Scanful.hs  Scanner.hs  Scanny.hs  SimsKeys.hs  SolutionChain.hs  SolutionNode.hs  Task.hs  Volume.hs
test/: Arbs.hs  Sims.txt  TestAchiTasks.hs  TestAchiVolume.hs  TestFunctions.hs  TestRNode.hs  TestRTree.hs  TestScanful.hs  VolumeBuilder.hs
