name:                beefs
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Corey Knight
maintainer:          corence@gmail.com
build-type:          Simple
cabal-version:       >= 2

library
  exposed-modules:     
                       Interval
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , containers >= 0.5.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TupleSections
                     , LambdaCase
                     , MultiWayIf
                     , BinaryLiterals
