name:                spatial
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Corey Knight
maintainer:          corence@gmail.com
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Volume, RTree, Interval, Count, AchiTask, Achikaps
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , containers
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite test-tasks
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestAchiTasks.hs
  build-depends:       base
                     , spatial
                     , hspec
                     , containers
                     , text

test-suite test-rtree
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestRTree.hs
  build-depends:       base
                     , spatial
                     , hspec
                     , QuickCheck
                     , random
                     , containers
                     , text
